--- a/pannels/notAvailable.html
+++ b/pannels/notAvailable.html
@@ -3,5 +3,6 @@
     <div id="notificacion" style="border:solid red 2px; margin: 0 auto; text-align: center; display: inline-block; position: relative; top: 10%; left:50%;width: 90vw; transform: translateX(-50%); ">
         <p style="font-size: 20px"><b>PAGINA EN DESARROLLO</b></p>
         <p>Se estan ultimando detalles para adaptarla a dispositivos moviles</p>
+        <p><a href="https://github.com/guillorente">Mi github</a></p>
     </div>
 </div>
